--- a/src/main/resources/templates/info/info5.html
+++ b/src/main/resources/templates/info/info5.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>绘制面板</title>
-    <link rel="stylesheet" href="../css/layui.css"  type="text/css">
+    <link rel="stylesheet" href="../layui/css/layui.css"  type="text/css">
     <script type="text/javascript" src="../fish/fish-topo-flow.js"></script>
     <script type="text/javascript" src="../fish/fish-topo-link.js"></script>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script src="../layui/layui.js"></script>
     <style>
         html{
             height: 100%;
@@ -45,7 +46,7 @@
 <body>
     <div class ="container">
         <div id ="canvas-panel">
-            <div id="flowIns" style="height: 700px; overflow: hidden;position:relative; border: 1px sold black">
+            <div id="flowIns" style="height: 700px; overflow: hidden;position:relative; border: 1px solid black">
             </div>
         </div>
         <div id ="button-panel" >
