--- a/src/main/resources/templates/info/info5.html
+++ b/src/main/resources/templates/info/info5.html
@@ -27,7 +27,11 @@
             width: 85%;
         }
 
+        .toolbar-box{
+            margin: 10px;
+        }
         #button-panel{
+            margin-top: 50px;
             position: relative;
             height:900px;
             float: right;
@@ -46,6 +50,17 @@
 <body>
     <div class ="container">
         <div id ="canvas-panel">
+            <div class="toolbar-box js-toolbar">
+                <div class="btn-group" role="group">
+                    <button type="button" class="layui-btn layui-btn-normal btn btn-default js-export-json" title="导出json">
+                        <span class="t-icon t-toolbar-json">导出json</span>
+                    </button>
+                    <button type="button" class="layui-btn layui-btn-normal btn btn-default js-export-png" title="导出图片">
+                        <span class="topofont topofont-png">导出图片</span>
+                    </button>
+                </div>
+                <input type="text" id="hostValue" hidden="hidden"/>
+            </div>
             <div id="flowIns" style="height: 700px; overflow: hidden;position:relative; border: 1px solid black">
             </div>
         </div>
@@ -60,5 +75,7 @@
         </div>
     </div>
     <script type="text/javascript" src="../js/info5.js"></script>
+
+
 </body>
 </html>
