--- a/src/main/resources/templates/info/operation/edit.html
+++ b/src/main/resources/templates/info/operation/edit.html
@@ -35,9 +35,7 @@
             </div>
         </div>
     </div>
-
 </body>
-
 <script>
 
     layui.use(['layer', 'form'], function(){
@@ -47,13 +45,15 @@
     });
 
     function  editInfo() {
+
+        window.parent.document.getElementById("hostValue").value=$("#IP_address").val();
         $.post({
-            url: "/searchIPStatus",
+            url: "/changeIPAddress",
             data: {
-                IPaddress: $("#IP_address").val(),
+                IPAddress: $("#IP_address").val(),
             },
             success: function (data) {
-                if(data == "normal"){
+                if(data == "501"){
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
                 }
